--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CPTM🚂</title>
 </head>
+
 <body>
-    mim de papai
+
+    <header id="header" class="header">
+        <div class="topbar d-flex align-items-center">
+            <div class="cointainer d-flex justify-content-center justify-content-md-between">
+                <div class="d-none d-md-flex align-items-center">
+
+                    <i class="bi bi-clock"> </i>
+                    Segunda a Sexta, 24h por dia sem parar sem pausas   
+
+                </div>
+
+                <div class="d-flex align-items-center">
+
+                    <i class="bi bi-telephone"> </i>
+                    Ligue Agora (11) 900000001 
+
+                </div>
+
+            </div><!-- fim do container -->
+        </div> <!-- fim topbar -->
+    </header> <!-- Fim do Header -->
+
+<main>
+    <div>
+        Titulo - Interface Web
+    </div>
+</main>
+
+<footer>
+    <div>
+        Companhia de Trens Metropolitanos
+    </div>
+</footer>
+    
 </body>
 </html>
