--- a/index.html
+++ b/index.html
@@ -4,13 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CPTM🚂</title>
+
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    
+    <!-- FavIcons -->  
+    <link rel="icon" href="">
+
+    <!-- Fonts -->
+
+   <!--  CSS Bootstrap -->
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+   <link href="https://cdn.jsdelivr.net/npm/aos@3.0.0-beta.6/dist/aos.css" rel="stylesheet">
+   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+   <link href="https://cdn.jsdelivr.net/npm/glightbox@3.2.0/dist/css/glightbox.min.css" rel="stylesheet">
+   <link href="https://cdn.jsdelivr.net/npm/swiper@9.4.0/swiper-bundle.min.css" rel="stylesheet">
+ 
 </head>
 
 <body>
 
     <header id="header" class="header">
         <div class="topbar d-flex align-items-center">
-            <div class="cointainer d-flex justify-content-center justify-content-md-between">
+            <div class="container d-flex justify-content-center justify-content-md-between">
                 <div class="d-none d-md-flex align-items-center">
 
                     <i class="bi bi-clock"> </i>
@@ -29,17 +46,17 @@
         </div> <!-- fim topbar -->
     </header> <!-- Fim do Header -->
 
-<main>
+    <main>
     <div>
         Titulo - Interface Web
     </div>
-</main>
+    </main>
 
-<footer>
+    <footer>
     <div>
         Companhia de Trens Metropolitanos
     </div>
-</footer>
+    </footer>
     
 </body>
 </html>
