--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
 
             </div><!-- fim do container -->
         </div> <!-- fim topbar -->
+
+        <div class="branding d-flex align-items-center">
+            <div class="container position-relative d-flex align-items-center justify-content-end">
+                <a href="" class="logo d-flex align-items-center me-auto">
+                    <img src="assets/img/logo.png" alt="">
+                </a>
+            </div>
+        </div><!-- fim da branding -->
+
     </header> <!-- Fim do Header -->
 
     <main>
