updade section stats

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link rel="icon" href="">
+  <link rel="icon" href="assets/img/favicon-32x32.png">
 
   <!-- Fonts -->
 
@@ -325,6 +325,7 @@
             Estamos comprometidos em proporcionar a melhor experiência para nossos pacientes, com atendimento personalizado, empatia e respeito. Sua saúde é nossa prioridade!       
           </p>
 
+
        </div> <!-- fim container -->
         </div>
        </div>
@@ -334,6 +335,82 @@
 
      <!-- status section -->
      <section id="stats" class="stats section">
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100"> 
+
+        <div class="row gy-4">
+          <!-- status 1 -->
+          <div class="col-lg-3 col-md-6">
+
+            <div class="stats-item d-flex align-items-center w-100 h-100">
+
+              <i class="fas fa-user-md flex-shrink-0"></i>
+
+            <div>
+              <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1"
+                class="purecounter"></span>
+              <p>Médicos</p>
+            </div>
+
+            </div>
+          </div>
+          <!-- fim status 1 -->
+           
+          <!-- status 2 -->
+          <div class="col-lg-3 col-md-6">
+
+            <div class="stats-item d-flex align-items-center w-100 h-100">
+
+              <i class="far fa-hospital flex-shrink-0"></i>
+
+            <div>
+              <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1"
+              class="purecounter"></span>
+            <p>Departamentos</p>
+
+            </div>
+
+            </div>
+          </div>
+          <!-- fim status 2 -->
+
+          <!-- status 3-->
+          <div class="col-lg-3 col-md-6">
+
+            <div class="stats-item d-flex align-items-center w-100 h-100">
+              
+              <i class="fas fa-flask flex-shrink-0"></i>
+
+            <div>
+              <span data-purecounter-start="0" data-purecounter-end="8" data-purecounter-duration="1"
+              class="purecounter"></span>
+            <p>Laboratórios de Pesquisa</p>
+            </div>
+
+            </div>
+          </div>
+          <!-- fim status 3 -->
+
+          <!-- status 4 -->
+          <div class="col-lg-3 col-md-6">
+
+            <div class="stats-item d-flex align-items-center w-100 h-100">
+
+              <i class="fas fa-award flex-shrink-0"></i>
+
+            <div>
+              <span data-purecounter-start="0" data-purecounter-end="150" data-purecounter-duration="1"
+              class="purecounter"></span>
+            <p>Prêmios</p>
+            </div>
+
+            </div>
+          </div>
+          <!-- fim status 4 -->
+
+        </div><!-- fim row -->
+
+      </div> <!-- fim container -->
 
      </section>
 
