update projeto scroll top button, features service

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <link rel="icon" href="assets/img/favicon-32x32.png">
 
   <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Protest+Strike&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
   <!-- Boostrap CSS Files -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -107,7 +110,7 @@
   <main class="main">
 
     <!-- HERO section -->
-    <section id="hero" class="hero section scroll-top">
+    <section id="hero" class="hero section">
 
       <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
@@ -378,7 +381,6 @@
           <div class="col-lg-3 col-md-6">
 
             <div class="stats-item d-flex align-items-center w-100 h-100">
-              
               <i class="fas fa-flask flex-shrink-0"></i>
 
             <div>
@@ -417,6 +419,53 @@
       <!-- Features Section -->
     <section id="features" class="features section"> 
       
+      <div class="container">
+        <div class="row justify-content-around gy-4">
+          <div class="features-image col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <img src="assets/img/features.jpg" alt="">
+          </div>
+
+          <div class="col-lg-5 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
+            <h3>Excelência e cuidado em todos os aspectos da sua saúde</h3>
+             <p>Nosso compromisso é proporcionar um atendimento humanizado e de qualidade, sempre priorizando o bem-estar e a saúde de nossos pacientes.</p>
+
+
+             <!-- começo icon box -->
+             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
+              <i class="fa-solid fa-hand-holding-medical flex-shrink-0"></i>
+              <div>
+                <h4><a href="" class="stretched-link">Atendimento Personalizado</a></h4>
+                <p>Garantimos um atendimento acolhedor e individualizado, respeitando as necessidades de cada paciente.</p>       
+              </div>
+            </div><!-- End Icon Box -->
+
+            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="400">
+              <i class="fa-solid fa-suitcase-medical flex-shrink-0"></i>
+              <div>
+                <h4><a href="" class="stretched-link">Equipamentos Modernos</a></h4>
+                <p>Utilizamos tecnologia de ponta para oferecer diagnósticos precisos e tratamentos eficazes.</p>
+              </div>
+            </div><!-- End Icon Box -->
+
+            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="500">
+              <i class="fa-solid fa-staff-snake flex-shrink-0"></i>
+              <div>
+                <h4><a href="" class="stretched-link">Profissionais Capacitados</a></h4>
+                <p>Contamos com uma equipe de especialistas dedicados e altamente qualificados para cuidar de você.</p>
+              </div>
+            </div><!-- End Icon Box -->
+
+            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="600">
+              <i class="fa-solid fa-lungs flex-shrink-0"></i>
+              <div>
+                <h4><a href="" class="stretched-link">Cuidados Multidisciplinares</a></h4>
+                <p>Oferecemos uma abordagem multidisciplinar, integrando diferentes áreas da saúde para o seu bem-estar completo.</p>
+              </div>
+            </div><!-- End Icon Box -->
+
+          </div>
+        </div>
+      </div>
     </section><!--fim caracteristicas-->
 
     <!-- services section -->
