--- a/index.html
+++ b/index.html
@@ -957,11 +957,8 @@
                 </div>
 
                 <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">sua mensagem foi enviada, Obrigado!</div>
 
-                  <button type="submit">Send Message</button>
+                  <button type="submit">Enviar</button>
                 </div>
 
               </div> <!-- fim row gy-4 -->
